Customize OpenApi
