# openapi.yaml
@@ -388,8 +388,10 @@ components:
       title: ValidationError
       type: object
 info:
-  title: FastAPI
-  version: 0.1.0
+  description: A service managing uploads of file objects to an S3-compatible Object
+    Storage.
+  title: Download Controller Service
+  version: 0.3.0
 openapi: 3.0.2
 paths:
   /files/{file_id}:
@@ -435,6 +437,8 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
       summary: Get file metadata including the current upload attempt.
+      tags:
+      - UploadControllerService
   /health:
     get:
       description: Used to test if this service is alive
@@ -446,6 +450,8 @@ paths:
               schema: {}
           description: Successful Response
       summary: health
+      tags:
+      - UploadControllerService
   /uploads:
     post:
       description: Initiate a new mutli-part upload for the given file.
@@ -496,6 +502,8 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
       summary: Initiate a new multi-part upload.
+      tags:
+      - UploadControllerService
   /uploads/{upload_id}:
     get:
       description: Get details on a specific upload.
@@ -538,6 +546,8 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
       summary: Get details on a specific upload.
+      tags:
+      - UploadControllerService
     patch:
       description: 'Declare a multi-part upload as complete by setting its status
         to "uploaded".
@@ -600,6 +610,8 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
       summary: Update the status of an existing multi-part upload.
+      tags:
+      - UploadControllerService
   /uploads/{upload_id}/parts/{part_no}/signed_urls:
     post:
       description: 'Create a pre-signed URL for the specified part number of the specified
@@ -653,3 +665,9 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
       summary: Create new pre-signed URL for a specific part.
+      tags:
+      - UploadControllerService
+servers:
+- url: /
+tags:
+- name: UploadControllerService
